[gd_scene load_steps=10 format=3 uid="uid://bxcpvldpdl5np"]

[ext_resource type="Theme" uid="uid://dg107ll84c5qe" path="res://Objects/Themes/theme_campaign_ui_1.tres" id="1_1txks"]
[ext_resource type="Script" path="res://Objects/Campaign/campaign_ui/army_creator/army_creator_UI.gd" id="2_8w0bf"]
[ext_resource type="PackedScene" uid="uid://d1yjnep65j74a" path="res://Objects/Campaign/military/army.tscn" id="3_udnsm"]
[ext_resource type="PackedScene" uid="uid://dvfxbxjjelt38" path="res://Objects/Campaign/campaign_ui/army_creator/btn_army_creator_unit.tscn" id="4_jqncl"]
[ext_resource type="Resource" uid="uid://d2w3bw50854bv" path="res://Objects/Campaign/military/unit_data/roman/hastati.tres" id="5_sgoi6"]
[ext_resource type="Resource" uid="uid://c6160o34jcgfy" path="res://Objects/Campaign/military/unit_data/generic/bowman.tres" id="6_gdan8"]
[ext_resource type="Resource" uid="uid://c2cbjscuefr16" path="res://Objects/Campaign/military/unit_data/generic/cavalry.tres" id="7_bisgy"]
[ext_resource type="PackedScene" uid="uid://c4h7u5gwt5l34" path="res://Objects/Campaign/campaign_ui/army_creator/army_creator_component.tscn" id="7_luj42"]
[ext_resource type="Script" path="res://Objects/Campaign/campaign_ui/army_creator/new_army_manager.gd" id="7_vh664"]

[node name="ArmyCreatorUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme = ExtResource("1_1txks")
script = ExtResource("2_8w0bf")
BtnArmyCreatorUnit = ExtResource("4_jqncl")
ArmyCampaignP = ExtResource("3_udnsm")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -206.0
offset_bottom = 196.0
grow_horizontal = 0

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="ContainerBtnCreatorUnits" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="BtnArmyCreatorUnit" parent="PanelContainer/MarginContainer/ContainerBtnCreatorUnits" instance=ExtResource("4_jqncl")]
layout_mode = 2
text = "Hastati"
unit_data = ExtResource("5_sgoi6")

[node name="BtnArmyCreatorUnit2" parent="PanelContainer/MarginContainer/ContainerBtnCreatorUnits" instance=ExtResource("4_jqncl")]
layout_mode = 2
text = "Bowman"
unit_data = ExtResource("6_gdan8")

[node name="BtnArmyCreatorUnit3" parent="PanelContainer/MarginContainer/ContainerBtnCreatorUnits" instance=ExtResource("4_jqncl")]
layout_mode = 2
text = "Cavalry"
unit_data = ExtResource("7_bisgy")

[node name="NewArmyManager" type="PanelContainer" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -399.0
offset_top = 8.0
offset_right = -206.0
offset_bottom = 250.0
grow_horizontal = 0
mouse_force_pass_scroll_events = false
script = ExtResource("7_vh664")
BtnArmyCreatorUnit = ExtResource("4_jqncl")

[node name="VBoxContainer" type="VBoxContainer" parent="NewArmyManager"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="NewArmyManager/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 5

[node name="ScrollContainer" type="ScrollContainer" parent="NewArmyManager/VBoxContainer/MarginContainer"]
layout_mode = 2
horizontal_scroll_mode = 0
vertical_scroll_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="NewArmyManager/VBoxContainer/MarginContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_right = 5

[node name="ContainerBtnNewArmy" type="VBoxContainer" parent="NewArmyManager/VBoxContainer/MarginContainer/ScrollContainer/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="VBoxContainer" type="VBoxContainer" parent="NewArmyManager/VBoxContainer"]
layout_mode = 2

[node name="LabelCost" type="Label" parent="NewArmyManager/VBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "Cost:  "

[node name="LabelMaintanence" type="Label" parent="NewArmyManager/VBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "Maintanence: "

[node name="TotalUnits" type="Label" parent="NewArmyManager/VBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="BtnCreateArmy" type="Button" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -169.0
offset_top = 165.0
offset_right = -43.0
offset_bottom = 196.0
grow_horizontal = 0
text = "Create army"

[node name="LabelProvinceSpawn" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0

[node name="ArmyCreatorComponent" parent="." instance=ExtResource("7_luj42")]
unique_name_in_owner = true

[connection signal="pressed" from="BtnCreateArmy" to="." method="_on_btn_create_army_pressed"]
